TableSidebar tests,Storybook changes,secondary button alignment fixed. Added Secondary button to List,Added Icons

--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -24,6 +24,9 @@
       .table-header-action-btn {
         margin: 0 0 1rem 0;
       }
+      .table-header-action-secondary-btn {
+        margin: 0rem 0 1rem 0.5rem;
+      }
     }
     :deep(.oxd-table-left-panel--separator) {
       margin-top: 0;
